experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/IsOneBitCharacter.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:9: error: ';' expected
          @ loop invariant 0 <= i && i <= n;
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:9: error: not a statement
          @ loop invariant 0 <= i && i <= n;
                                  ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:9: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant 0 <= i && i <= n;
                                ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:10: error: ';' expected
          @ loop invariant (\forall int k; 0 <= k && k < i; bits[k] == 0 || bits[k] == 1);
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:10: error: not a statement
          @ loop invariant (\forall int k; 0 <= k && k < i; bits[k] == 0 || bits[k] == 1);
                                                  ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:10: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int k; 0 <= k && k < i; bits[k] == 0 || bits[k] == 1);
                                           ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:10: error: not a statement
          @ loop invariant (\forall int k; 0 <= k && k < i; bits[k] == 0 || bits[k] == 1);
                                                                         ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:10: error: ';' expected
          @ loop invariant (\forall int k; 0 <= k && k < i; bits[k] == 0 || bits[k] == 1);
                                                                                        ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:10: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant (\forall int k; 0 <= k && k < i; bits[k] == 0 || bits[k] == 1);
                                                            ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:11: error: ';' expected
          @ loop invariant i <= n - 1;
                          ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:11: error: not a statement
          @ loop invariant i <= n - 1;
                             ^
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/IsOneBitCharacter/IsOneBitCharacter.java:11: error: Expected a declaration or a JML construct inside the JML annotation here
          @ loop invariant i <= n - 1;
                           ^
12 errors
1 warning
